[package]
name = "funniversaries"
version = "0.0.1"
authors = ["Maël Sicard-Cras <mael.sicardcras@gmail.com>"]
description = "Fun Anniversaries generator library in Rust"
edition = "2018"
license = "Apache-2.0/MIT"
homepage = "https://github.com/MSC29/funniversaries"
repository = "https://github.com/MSC29/funniversaries"
documentation = "https://github.com/MSC29/funniversaries"
readme = "README.md"
keywords = ["date", "time", "calendar", "fun", "anniversary"]
categories = ["date-and-time"]

[lib]
name = "funniversaries"
path = "src/lib.rs"
edition = "2018"
crate-type = ["lib"]

[dependencies]
chrono = "0.4"