[package]
name = "funniversaries"
version = "0.0.5"
authors = ["Maël Sicard-Cras <mael.sicardcras@gmail.com>"]
description = "Fun Anniversaries generator library in Rust"
edition = "2018"
license = "Apache-2.0/MIT"
homepage = "https://github.com/MSC29/funniversaries"
repository = "https://github.com/MSC29/funniversaries"
documentation = "https://github.com/MSC29/funniversaries"
readme = "README.md"
keywords = ["date", "time", "calendar", "fun", "anniversary"]
categories = ["date-and-time"]

[lib]
name = "funniversaries_lib"
path = "src/lib.rs"
edition = "2018"
crate-type = ["lib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }